# KitonyTerms

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  README.zh-CN.md
.agentdocs/: architecture.md  index.md  maintenance.md
.agentdocs/governance/: rust.md
.github/scripts/: allocate-mobile-build-number.sh  package-android-apk.sh  package-ios-ipa.sh  publish-alpha.sh
.github/workflows/: alpha.yml  release.yml
crates/kt-app/: Cargo.toml  build.rs
crates/kt-app/assets/linux/: kitonyterms.desktop
crates/kt-app/assets/macos/: KitonyTerms.icns
crates/kt-app/src/: app.rs  connect_dialog.rs  fonts.rs  icon.rs  input.rs  main.rs  single_instance.rs  store.rs  terminal_view.rs  unlock_dialog.rs
crates/kt-app/tests/: mobile_packaging_contract.rs
crates/kt-config/: Cargo.toml
crates/kt-config/src/: lib.rs  ssh_config.rs
crates/kt-config/tests/: groups.rs
crates/kt-core/: Cargo.toml
crates/kt-core/examples/: headless.rs
crates/kt-core/src/: lib.rs  monitor.rs  session.rs  sftp.rs
crates/kt-core/src/ssh/: handler.rs  mod.rs  proxy.rs
crates/kt-core/src/term/: color.rs  mod.rs  snapshot.rs
crates/kt-core/tests/: roundtrip.rs
crates/kt-secrets/: Cargo.toml
crates/kt-secrets/src/: format.rs  lib.rs
crates/kt-ui/: Cargo.toml
crates/kt-ui/assets/: terminal.css
crates/kt-ui/src/: lib.rs  state.rs  store.rs
crates/kt-ui/src/assets/: app.css
crates/kt-ui/src/components/: app.rs  app_logic.rs  app_runtime.rs  desktop_menu.rs  dialog.rs  external_edit.rs  icons.rs  main_shell.rs  mod.rs  monitor.rs  security_dialogs.rs  sftp.rs  sidebar.rs  state_controller.rs  terminal.rs  workbench.rs
crates/kt-ui/src/components/main_shell/: sidebar_panel.rs  status_bar.rs  workbench_panel.rs
crates/kt-ui/src/i18n/: en.rs  mod.rs  zh_cn.rs
