[package]
name = "kt-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "kitonyterms"
path = "src/main.rs"

[dependencies]
# UI 组件库
kt-ui.workspace = true

# Dioxus 框架
dioxus.workspace = true

# 日志
tracing.workspace = true
tracing-subscriber.workspace = true
