[package]
name = "kt-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "kitonyterms"
path = "src/main.rs"

[dependencies]
# UI 组件库
kt-ui.workspace = true
kt-config.workspace = true

# Dioxus 框架
dioxus.workspace = true
fs2.workspace = true
rfd.workspace = true

# 日志
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile = "3"

[target.'cfg(windows)'.dependencies]
windows-sys.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
objc2.workspace = true
objc2-app-kit = { workspace = true, features = ["NSApplication", "NSImage"] }
objc2-foundation = { workspace = true, features = ["NSData"] }
