[package]
name = "kt-secrets"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Master-password encrypted secret vault for KitonyTerms (Argon2id + XChaCha20-Poly1305)"

[dependencies]
serde.workspace = true
serde_json.workspace = true
argon2.workspace = true
chacha20poly1305.workspace = true
rand_core.workspace = true
zeroize.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
